# kalypso-unified

./: .gitignore  Cargo.toml  README.md  test_get_PrivInput.sh  test_get_ask_status.sh
.cargo/: config.toml
bindings/src/: access_control_upgradeable.rs  address.rs  attestation_auther.rs  attestation_auther_upgradeable.rs  attestation_verifier.rs  base_ultra_verifier.rs  dispute.rs  ecdsa.rs  entity_key_registry.rs  erc165_upgradeable.rs  erc1967_utils.rs  error.rs  generator_registry.rs  helper.rs  i_access_control.rs  i_attestation_verifier.rs  i_plonk_vk.rs  i_transfer_verifier.rs  i_verifier.rs  i_verifier_zksync.rs  i_xor_2_verifier.rs  i_zksync_verifier.rs  il2_staking.rs  input_and_proof_format_registry.rs  lib.rs  mock_attestation_verifier.rs  mock_token.rs  mock_verifier.rs  pairing.rs  pausable_upgradeable.rs  plonk_verifier_wrapper.rs  priority_log.rs  proof_marketplace.rs  reentrancy_guard_upgradeable.rs  safe_erc20.rs  set_pmp.rs  shared_types.rs  storage_slot.rs  tee_verifier_wrapper.rs  tee_verifier_wrapper_factory.rs  (+12 more)
generator/: Cargo.toml
generator/src/: lib.rs  models.rs
generator_client/: Cargo.toml  README.md
generator_client/src/: client.rs  handler.rs  kalypso.rs  lib.rs  main.rs  model.rs  supervisord.rs
generator_client/src/handler_funcs/: generator_config_setup.rs  mod.rs  update_generator_config.rs  update_runtime_config.rs
helper/: Cargo.toml  attestation_helpers.rs  common_handlers.rs  custom_logger.rs  lib.rs  secret_inputs_helpers.rs  ssc.rs
helper/src/: common_handlers.rs  lib.rs  sch_payload.rs
helper/src/middlewares/: dirty_cors.rs  mod.rs  ratelimiter.rs  request_limiter.rs
integration_check_data_template/ivsCustomData/: check_encrypted_input_payload.json  check_input_payload.json  get_attestation_for_invalid_inputs_payload.json
integration_check_data_template/proverCustomData/: generate_proof_payload.json
integration_checks/: Cargo.toml
integration_checks/src/: main.rs
ivs/: Cargo.toml
ivs/src/: lib.rs  models.rs
ivs_client/: Cargo.toml  README.md
ivs_client/src/: handler.rs  kalypso.rs  main.rs  middleware.rs  model.rs  supervisord.rs
listener/: Cargo.toml  README.md
listener/src/: ask.rs  generator_store.rs  job_creator.rs  lib.rs  listener.rs  main.rs  secret_input_helpers.rs  server.rs
listener/src/listener/: confidential_provers.rs  mod.rs  non_confidential_prover.rs  prover.rs
listener/src/proof_generator/: confidential_provers.rs  mod.rs  non_confidential_prover.rs  prover.rs
matching_engine/: Cargo.toml  README.md
matching_engine/src/: ask.rs  costs.rs  generator.rs  lib.rs  main.rs  market_metadata.rs  models.rs  routes.rs  utility.rs
matching_engine/src/ask_lib/: ask.rs  ask_status.rs  ask_store.rs  mod.rs
matching_engine/src/counters/: counters.rs  median_counter.rs  mod.rs
matching_engine/src/generator_lib/: generator_helper.rs  generator_query.rs  generator_state.rs  generator_store.rs  key_store.rs  mod.rs
matching_engine/src/jobs/: cleanup.rs  mod.rs  parser.rs  server.rs
matching_engine/src/log_processor/: constants.rs  er.rs  gr.rs  mod.rs  pm.rs
matching_engine/src/routes/: ask_status.rs  chain_status.rs  decrypt_request.rs  get_priv_inputs.rs  market_info.rs  mod.rs
matching_engine/src/routes/ui_routes/: cache.rs  dashboard.rs  generators.rs  markets.rs  mod.rs  single_generator.rs  single_market.rs  welcome.rs
matching_engine_client/: Cargo.toml  README.md
matching_engine_client/src/: client.rs  handler.rs  kalypso.rs  main.rs  middleware.rs  model.rs  response.rs  supervisord.rs
matching_engine_client/src/handler_funcs/: generate_config_setup.rs  mod.rs  restart_matching_engine.rs  start_matching_engine.rs  stop_matching_engine.rs  update_matching_engine_config.rs
