[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
bindings = { path = "../bindings", package = "foundry-contracts" }
ethers ={version = "2.0.10", features = ["abigen", "ws", "rustls"] }
kalypso_helper = { path = "../helper", package = "helper" } 
rand = "0.8"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"