[package]
name = "generator_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0"
actix-web = "4.5.1"
anyhow = "1.0.86"
bindings = { path = "../bindings", package = "foundry-contracts" }
dotenv = "0.15.0"
ecies = {version = "0.2.6", features = ["std"]}
env_logger = "0.11"
ethers = {version = "2.0.8", features = ["abigen", "ws", "rustls"] }
futures-util = "0.3"
helper = {path = "../helper", package = "helper"}
hex = "0.4"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = "0.12.4"
secp256k1 = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
validator = { version = "0.18.1", features = ["derive"] }