[package]
name = "helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
aes-gcm = "0.10.3"
ecies = {version = "0.2.6", features = ["std"]}
ethers = { version = "2", features = ["rustls"] }
hex = "0.4.3"
openssl = { version = "0.10.57", features = ["vendored"] }
serde = "1.0.178"
serde_json = "1.0"

[lib]
name = "helper"
path = "lib.rs"