[package]
name = "helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-extensible-rate-limit = "0.3.1"
actix-web = "4.5.1"
aes-gcm = "0.10.3"
anyhow = "1.0.86"
chrono = { version = "0.4", features = ["serde"] }
ecies = {version = "0.2.6", features = ["std"]}
ethers = { version = "2", features = ["rustls"] }
flate2 = "1.0.28"
futures = "0.3"
hex = "0.4.3"
log = "0.4"
openssl = { version = "0.10.57", features = ["vendored"] }
secp256k1 = "0.28.0"
serde = "1.0.178"
serde_json = "1.0"
validator = { version = "0.18.1", features = ["derive"] }
rustls = "0.20"
tokio = { version = "1", features = ["full"] }
actix-cors = {version = "0.7.0", optional=true }

[features]
default = []
enable_cors = ["actix-cors"]