[package]
name = "integration_checks"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.11"
generator ={ path = "../generator", package = "generator" }
tokio = { version = "1.16.1", features = ["full"] }
ivs ={ path = "../ivs", package = "ivs" }
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
