[package]
name = "integration_checks"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.11"
generator ={ path = "../generator", package = "generator" }
ivs ={ path = "../ivs", package = "ivs" }
matching_engine = { path = "../matching_engine", package = "matching_engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
tokio = { version = "1.16.1", features = ["full"] }
