[package]
name = "matching_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.4.1", features = ["rustls"] }
anyhow = "1.0.86"
bindings = { path = "../bindings", package = "foundry-contracts" }
dotenv = "0.15.0"
ecies = {version = "0.2.6", features = ["std"]}
elliptic = "0.5.0"
env_logger = "0.11.3"
ethers = { version = "2", features = ["rustls"] }
eyre = "0.6"
flate2 = "1.0.28"
futures-util = "0.3.28"
hex = "0.4.3"
im = "15.1.0"
itertools = "0.13.0"
kalypso_helper = {path = "../helper", package = "helper"}
lazy_static = "1.4.0"
libzeropool-zkbob = "1.3.0"
log = "0.4"
reqwest = { version = "0.12.4", features = ["json"] }
secp256k1 = "0.29.0"
serde = "1.0.178"
serde_json = "1.0.104"
service_check_helper = {path = "../generator", package = "generator"}
tokio = { version = "1.15.0", features = ["full"] }
